attempted nav fix with overflow in body

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     color: #293241;
     border-top: 10px solid #293241;
     background: #e0fbfc;
+    overflow: clip;
 
 }
 
